cmake_minimum_required(VERSION 3.14)
project(ANSICProgrammingLanguage)

set(CMAKE_CXX_STANDARD 14)

add_executable(ANSICProgrammingLanguage
        Chapter1/Exercise1-1/Exercize1-1.c
        Chapter1/Exercise1-10/Exercise1-10.c
        Chapter1/Exercise1-11/Exercise1-11.c
        Chapter1/Exercise1-12/Exercise1-12.c
        Chapter1/Exercise1-13/Exercise1-13.c
        Chapter1/Exercise1-14/Exercise1-14.c
        Chapter1/Exercise1-2/Exercise1-2.c
        Chapter1/Exercise1-3/Exercize1-3.c
        Chapter1/Exercise1-4/Exercise1-4.c
        Chapter1/Exercise1-5/Exercise1-5.c
        Chapter1/Exercise1-6/Exercise1-6.c
        Chapter1/Exercise1-7/Exercise1-7.c
        Chapter1/Exercise1-8/Exercise1-8.c
        Chapter1/Exercise1-9/Exercise1-9.c
        LICENSE
        README.md Chapter1/Exercise1-15/Exercise1-15.c)
